[package]
name = "i3-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive", "env"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
